--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "cd project-root/Backend && npm install && npm run build && cd ../Frontend && npm install && npm run build && cd ../Backend && npm start"
+    "build": "cd ./Backend && npm install && cd ../Frontend && npm install && cd ../Backend",
+    "start": "cd ./Frontend && npm start & cd ../Backend && npm start"
   },
   "keywords": [],
   "author": "",
