--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "cd ./Backend && npm install && cd ../Frontend && npm install && cd ../Backend",
+    "build": "npm install && cd ./Backend && npm install && cd ../Frontend && npm install && cd ../Backend",
     "start": "concurrently \"npm --prefix ./Frontend start\" \"npm --prefix ./Backend start\""
   },
   "keywords": [],
