--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npm install && cd ./Backend && npm install && cd ../Frontend && npm install && cd ../Backend",
-    "start": "concurrently \"npm --prefix ./Frontend start\" \"npm --prefix ./Backend start\""
+    "start": "\"npm --prefix ./Frontend start\""
   },
   "keywords": [],
   "author": "",
